# pokemon-team-generator

./: .gitignore  CMakeLists.txt  Dockerfile
data/: allPokemon.json  coolPokemon.json  pokemon.json  teamMembers_tgom_ghost.json  typeChart.json  type_ability_combos.json
docker_out/: allPokemon.json
src/: CMakeLists.txt  generator.cpp  generator.h  logger.h  main.cpp  pokemon.cpp  pokemon.h  team.cpp  team.h  types.cpp  types.h
tests/: CMakeLists.txt  test_pokemon.cpp  test_team.cpp  test_types.cpp
util/: Dockerfile.pokemon_data  Dockerfile.scrape  get_pokemon_data.py  json_one_element_per_line.py  renplat_pokedex_scrape.py  type-ability-combo_calculator.py  unique_type-ability_combo_generator.py
